Search page - product section - full adaptive.

--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -896,7 +896,15 @@ picture {
   margin-bottom: 176px;
 }
 
-/* line 24, src/scss/_shared/_common.scss */
+@media screen and (max-width: 767px) {
+  /* line 13, src/scss/_shared/_common.scss */
+  .search-page .line {
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+}
+
+/* line 28, src/scss/_shared/_common.scss */
 .c-form__group {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -907,14 +915,14 @@ picture {
 }
 
 @media screen and (max-width: 575px) {
-  /* line 28, src/scss/_shared/_common.scss */
+  /* line 32, src/scss/_shared/_common.scss */
   .c-form__group--select {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
 }
 
-/* line 33, src/scss/_shared/_common.scss */
+/* line 37, src/scss/_shared/_common.scss */
 .c-form__group--select .c-form__group-col {
   width: 160px;
   margin-left: 6px;
@@ -922,7 +930,7 @@ picture {
 }
 
 @media screen and (max-width: 575px) {
-  /* line 33, src/scss/_shared/_common.scss */
+  /* line 37, src/scss/_shared/_common.scss */
   .c-form__group--select .c-form__group-col {
     width: 100%;
     margin-left: 0;
@@ -931,24 +939,24 @@ picture {
   }
 }
 
-/* line 44, src/scss/_shared/_common.scss */
+/* line 48, src/scss/_shared/_common.scss */
 .c-form__group--select .c-form__group-col:first-of-type {
   margin-left: 0;
 }
 
-/* line 47, src/scss/_shared/_common.scss */
+/* line 51, src/scss/_shared/_common.scss */
 .c-form__group--select .c-form__group-col:last-of-type {
   margin-right: 0;
 }
 
 @media screen and (max-width: 575px) {
-  /* line 47, src/scss/_shared/_common.scss */
+  /* line 51, src/scss/_shared/_common.scss */
   .c-form__group--select .c-form__group-col:last-of-type {
     margin-bottom: 0;
   }
 }
 
-/* line 56, src/scss/_shared/_common.scss */
+/* line 60, src/scss/_shared/_common.scss */
 .c-form__group--input {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -956,14 +964,14 @@ picture {
 }
 
 @media screen and (max-width: 575px) {
-  /* line 56, src/scss/_shared/_common.scss */
+  /* line 60, src/scss/_shared/_common.scss */
   .c-form__group--input {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
 }
 
-/* line 62, src/scss/_shared/_common.scss */
+/* line 66, src/scss/_shared/_common.scss */
 .c-form__group--input .c-form__group-col {
   width: 190px;
   margin-left: 5px;
@@ -971,29 +979,29 @@ picture {
 }
 
 @media screen and (max-width: 575px) {
-  /* line 62, src/scss/_shared/_common.scss */
+  /* line 66, src/scss/_shared/_common.scss */
   .c-form__group--input .c-form__group-col {
     width: 100%;
     margin: 0;
   }
 }
 
-/* line 71, src/scss/_shared/_common.scss */
+/* line 75, src/scss/_shared/_common.scss */
 .c-form__group--input .c-form__group-col:first-of-type {
   margin-left: 0;
 }
 
-/* line 74, src/scss/_shared/_common.scss */
+/* line 78, src/scss/_shared/_common.scss */
 .c-form__group--input .c-form__group-col:last-of-type {
   margin-right: 0;
 }
 
-/* line 87, src/scss/_shared/_common.scss */
+/* line 91, src/scss/_shared/_common.scss */
 .c-form__field {
   position: relative;
 }
 
-/* line 93, src/scss/_shared/_common.scss */
+/* line 97, src/scss/_shared/_common.scss */
 .c-form__field.is-focus .c-form__input-wrapper input,
 .c-form__field.is-focus .c-form__input-wrapper textarea,
 .c-form__field.is-focus .c-form__textarea-wrapper input,
@@ -1004,7 +1012,7 @@ picture {
   transition: border-color 0.3s ease-in-out;
 }
 
-/* line 99, src/scss/_shared/_common.scss */
+/* line 103, src/scss/_shared/_common.scss */
 .c-form__field.is-focus .c-form__input-wrapper:before,
 .c-form__field.is-focus .c-form__textarea-wrapper:before {
   border-color: #8d96ae;
@@ -1013,7 +1021,7 @@ picture {
   transition: border-color 0.3s ease-in-out;
 }
 
-/* line 106, src/scss/_shared/_common.scss */
+/* line 110, src/scss/_shared/_common.scss */
 .c-form__field--btn {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1048,13 +1056,13 @@ picture {
   color: #4d5964;
 }
 
-/* line 118, src/scss/_shared/_common.scss */
+/* line 122, src/scss/_shared/_common.scss */
 .c-form__input-wrapper, .c-form__textarea-wrapper {
   position: relative;
   margin-bottom: 16px;
 }
 
-/* line 122, src/scss/_shared/_common.scss */
+/* line 126, src/scss/_shared/_common.scss */
 .c-form__input-wrapper:before, .c-form__textarea-wrapper:before {
   z-index: 0;
   content: '';
@@ -1071,7 +1079,7 @@ picture {
   transition: border-color 0.3s ease-in-out;
 }
 
-/* line 138, src/scss/_shared/_common.scss */
+/* line 142, src/scss/_shared/_common.scss */
 .c-form__input-wrapper:hover input,
 .c-form__input-wrapper:hover textarea, .c-form__input-wrapper:active input,
 .c-form__input-wrapper:active textarea, .c-form__textarea-wrapper:hover input,
@@ -1083,7 +1091,7 @@ picture {
   transition: border-color 0.3s ease-in-out;
 }
 
-/* line 144, src/scss/_shared/_common.scss */
+/* line 148, src/scss/_shared/_common.scss */
 .c-form__input-wrapper:hover:before, .c-form__input-wrapper:active:before, .c-form__textarea-wrapper:hover:before, .c-form__textarea-wrapper:active:before {
   border-color: #8d96ae;
   -webkit-transition: border-color 0.3s ease-in-out;
@@ -1091,7 +1099,7 @@ picture {
   transition: border-color 0.3s ease-in-out;
 }
 
-/* line 152, src/scss/_shared/_common.scss */
+/* line 156, src/scss/_shared/_common.scss */
 .c-form__input {
   outline: none;
   position: absolute;
@@ -1112,13 +1120,13 @@ picture {
   transition: border-color 0.3s ease-in-out;
 }
 
-/* line 168, src/scss/_shared/_common.scss */
+/* line 172, src/scss/_shared/_common.scss */
 .c-form__input-wrapper {
   min-height: 62px;
   background-color: #fff;
 }
 
-/* line 174, src/scss/_shared/_common.scss */
+/* line 178, src/scss/_shared/_common.scss */
 .c-form__textarea {
   outline: none;
   resize: none;
@@ -1140,12 +1148,12 @@ picture {
   transition: border-color 0.3s ease-in-out;
 }
 
-/* line 191, src/scss/_shared/_common.scss */
+/* line 195, src/scss/_shared/_common.scss */
 .c-form__textarea-wrapper {
   min-height: 309px;
 }
 
-/* line 196, src/scss/_shared/_common.scss */
+/* line 200, src/scss/_shared/_common.scss */
 .c-form__select {
   overflow: hidden;
   height: 100%;
@@ -1155,13 +1163,13 @@ picture {
 }
 
 @media screen and (max-width: 575px) {
-  /* line 196, src/scss/_shared/_common.scss */
+  /* line 200, src/scss/_shared/_common.scss */
   .c-form__select {
     min-height: 36px;
   }
 }
 
-/* line 207, src/scss/_shared/_common.scss */
+/* line 211, src/scss/_shared/_common.scss */
 .c-form__select:hover .c-form__select-icon-wrap {
   background-color: #d6273c;
   border-color: #ab182a;
@@ -1170,7 +1178,7 @@ picture {
   transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
 }
 
-/* line 212, src/scss/_shared/_common.scss */
+/* line 216, src/scss/_shared/_common.scss */
 .c-form__select:hover .c-form__select-icon-wrap i {
   text-shadow: 0 1px 0 #ab182a;
   color: #fff;
@@ -1179,7 +1187,7 @@ picture {
   transition: text-shadow 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-/* line 220, src/scss/_shared/_common.scss */
+/* line 224, src/scss/_shared/_common.scss */
 .c-form__select select {
   opacity: 0;
   cursor: pointer;
@@ -1195,7 +1203,7 @@ picture {
           box-shadow: none;
 }
 
-/* line 234, src/scss/_shared/_common.scss */
+/* line 238, src/scss/_shared/_common.scss */
 .c-form__select-value {
   white-space: nowrap;
   overflow: hidden;
@@ -1216,19 +1224,19 @@ picture {
 }
 
 @media screen and (max-width: 575px) {
-  /* line 234, src/scss/_shared/_common.scss */
+  /* line 238, src/scss/_shared/_common.scss */
   .c-form__select-value {
     line-height: 36px;
     font-size: 14px;
   }
 }
 
-/* line 255, src/scss/_shared/_common.scss */
+/* line 259, src/scss/_shared/_common.scss */
 .c-form__select-value.is-choose {
   color: #000;
 }
 
-/* line 260, src/scss/_shared/_common.scss */
+/* line 264, src/scss/_shared/_common.scss */
 .c-form__select-icon {
   text-shadow: 0 1px 0 white;
   color: #4d5964;
@@ -1240,7 +1248,7 @@ picture {
   transition: text-shadow 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-/* line 268, src/scss/_shared/_common.scss */
+/* line 272, src/scss/_shared/_common.scss */
 .c-form__select-icon-wrap {
   position: absolute;
   display: -webkit-box;
@@ -1265,7 +1273,7 @@ picture {
   transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
 }
 
-/* line 286, src/scss/_shared/_common.scss */
+/* line 290, src/scss/_shared/_common.scss */
 .c-form__btn {
   outline: none;
   cursor: pointer;
@@ -1288,13 +1296,13 @@ picture {
 }
 
 @media screen and (max-width: 575px) {
-  /* line 286, src/scss/_shared/_common.scss */
+  /* line 290, src/scss/_shared/_common.scss */
   .c-form__btn {
     max-width: 100%;
   }
 }
 
-/* line 307, src/scss/_shared/_common.scss */
+/* line 311, src/scss/_shared/_common.scss */
 .c-form__btn:hover {
   background-color: #23394e;
   text-shadow: 0 2px 0 #0a1723;
@@ -1303,7 +1311,7 @@ picture {
   transition: background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
 }
 
-/* line 312, src/scss/_shared/_common.scss */
+/* line 316, src/scss/_shared/_common.scss */
 .c-form__btn:hover:before {
   border-color: #0a1723;
   background-color: #0a1723;
@@ -1312,7 +1320,7 @@ picture {
   transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
-/* line 319, src/scss/_shared/_common.scss */
+/* line 323, src/scss/_shared/_common.scss */
 .c-form__btn:active {
   line-height: 50px;
   background-color: #d6273c;
@@ -1322,7 +1330,7 @@ picture {
   transition: line-height 0.3s ease-in-out, background-color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
 }
 
-/* line 325, src/scss/_shared/_common.scss */
+/* line 329, src/scss/_shared/_common.scss */
 .c-form__btn:active:before {
   bottom: 6px;
   border-color: #af1932;
@@ -1332,7 +1340,7 @@ picture {
   transition: bottom 0.3s ease-in-out, border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
-/* line 333, src/scss/_shared/_common.scss */
+/* line 337, src/scss/_shared/_common.scss */
 .c-form__btn:before {
   z-index: -1;
   content: '';
@@ -2914,19 +2922,56 @@ picture {
   }
 }
 
-/* line 4, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 575px) {
+  /* line 4, src/scss/_components/search/_product.scss */
+  .product .c-grid {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
+/* line 11, src/scss/_components/search/_product.scss */
 .product__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-/* line 7, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 767px) {
+  /* line 11, src/scss/_components/search/_product.scss */
+  .product__wrapper {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+/* line 17, src/scss/_components/search/_product.scss */
 .product__wrapper-left, .product__wrapper-right {
   width: 50%;
 }
 
-/* line 13, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 767px) {
+  /* line 17, src/scss/_components/search/_product.scss */
+  .product__wrapper-left, .product__wrapper-right {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  /* line 25, src/scss/_components/search/_product.scss */
+  .product__wrapper-left {
+    padding-right: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  /* line 31, src/scss/_components/search/_product.scss */
+  .product__wrapper-right {
+    padding-left: 15px;
+  }
+}
+
+/* line 38, src/scss/_components/search/_product.scss */
 .product__box {
   width: 100%;
   max-width: 530px;
@@ -2934,11 +2979,13 @@ picture {
   margin-right: auto;
 }
 
-/* line 19, src/scss/_components/search/_product.scss */
+/* line 44, src/scss/_components/search/_product.scss */
 .product__box-head {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -2948,13 +2995,21 @@ picture {
   padding-bottom: 41px;
 }
 
-/* line 25, src/scss/_components/search/_product.scss */
+/* line 51, src/scss/_components/search/_product.scss */
 .product__box-head p {
+  white-space: nowrap;
   font-size: 36px;
   font-weight: 600;
 }
 
-/* line 30, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 767px) {
+  /* line 51, src/scss/_components/search/_product.scss */
+  .product__box-head p {
+    font-size: 30px;
+  }
+}
+
+/* line 60, src/scss/_components/search/_product.scss */
 .product__box-head span {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2971,12 +3026,26 @@ picture {
   font-weight: 600;
 }
 
-/* line 39, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 767px) {
+  /* line 60, src/scss/_components/search/_product.scss */
+  .product__box-head span {
+    font-size: 16px;
+  }
+}
+
+/* line 72, src/scss/_components/search/_product.scss */
 .product__box-head span i {
   margin-right: 18px;
 }
 
-/* line 45, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 767px) {
+  /* line 72, src/scss/_components/search/_product.scss */
+  .product__box-head span i {
+    margin-right: 10px;
+  }
+}
+
+/* line 81, src/scss/_components/search/_product.scss */
 .product__box-main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2988,13 +3057,30 @@ picture {
   margin-bottom: 48px;
 }
 
-/* line 51, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 575px) {
+  /* line 81, src/scss/_components/search/_product.scss */
+  .product__box-main {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: auto;
+    margin-bottom: 30px;
+  }
+}
+
+/* line 92, src/scss/_components/search/_product.scss */
 .product__box-main > div {
   width: 50%;
   height: 100%;
 }
 
-/* line 55, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 575px) {
+  /* line 92, src/scss/_components/search/_product.scss */
+  .product__box-main > div {
+    width: 100%;
+  }
+}
+
+/* line 99, src/scss/_components/search/_product.scss */
 .product__box-main > div:nth-of-type(2) {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3012,37 +3098,57 @@ picture {
   padding-bottom: 40px;
 }
 
-/* line 63, src/scss/_components/search/_product.scss */
+/* line 107, src/scss/_components/search/_product.scss */
 .product__box-main > div img {
   display: block;
   max-width: 100%;
   max-height: 100%;
 }
 
-/* line 71, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 575px) {
+  /* line 107, src/scss/_components/search/_product.scss */
+  .product__box-main > div img {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+  }
+}
+
+/* line 120, src/scss/_components/search/_product.scss */
 .product__box-body {
   padding-bottom: 39px;
 }
 
-/* line 74, src/scss/_components/search/_product.scss */
+/* line 123, src/scss/_components/search/_product.scss */
 .product__box-body p {
   color: #4f6a7a;
   line-height: 1.8;
   font-size: 16px;
 }
 
-/* line 79, src/scss/_components/search/_product.scss */
+/* line 128, src/scss/_components/search/_product.scss */
 .product__box-body p a {
   color: #d72d42;
   font-weight: bold;
+  -webkit-transition: color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
 }
 
-/* line 86, src/scss/_components/search/_product.scss */
+/* line 133, src/scss/_components/search/_product.scss */
+.product__box-body p a:hover {
+  color: #0a1723;
+  -webkit-transition: color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+
+/* line 141, src/scss/_components/search/_product.scss */
 .product__box-footer {
   padding-bottom: 50px;
 }
 
-/* line 91, src/scss/_components/search/_product.scss */
+/* line 146, src/scss/_components/search/_product.scss */
 .product__box-footer ul li {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3053,23 +3159,23 @@ picture {
   margin-bottom: 51px;
 }
 
-/* line 97, src/scss/_components/search/_product.scss */
+/* line 152, src/scss/_components/search/_product.scss */
 .product__box-footer ul li > div:first-of-type {
   width: 90px;
 }
 
-/* line 100, src/scss/_components/search/_product.scss */
+/* line 155, src/scss/_components/search/_product.scss */
 .product__box-footer ul li > div:last-of-type {
   width: 100%;
   max-width: calc(100% - 90px);
 }
 
-/* line 106, src/scss/_components/search/_product.scss */
+/* line 161, src/scss/_components/search/_product.scss */
 .product__box-footer ul li:last-of-type {
   margin-bottom: 43px;
 }
 
-/* line 112, src/scss/_components/search/_product.scss */
+/* line 167, src/scss/_components/search/_product.scss */
 .product__box-footer h3 {
   padding-bottom: 11px;
   color: #4f6a7a;
@@ -3078,27 +3184,41 @@ picture {
   font-weight: 600;
 }
 
-/* line 120, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 767px) {
+  /* line 167, src/scss/_components/search/_product.scss */
+  .product__box-footer h3 {
+    font-size: 20px;
+  }
+}
+
+/* line 178, src/scss/_components/search/_product.scss */
 .product__box-footer p,
 .product__box-footer span {
   color: #4f6a7a;
   font-size: 16px;
 }
 
-/* line 127, src/scss/_components/search/_product.scss */
+/* line 185, src/scss/_components/search/_product.scss */
 .product__box-price {
   font-size: 48px;
   font-weight: bold;
 }
 
-/* line 132, src/scss/_components/search/_product.scss */
+@media screen and (max-width: 767px) {
+  /* line 185, src/scss/_components/search/_product.scss */
+  .product__box-price {
+    font-size: 40px;
+  }
+}
+
+/* line 193, src/scss/_components/search/_product.scss */
 .product__box-desc {
   padding-bottom: 30px;
   color: #99aab3;
   font-size: 16px;
 }
 
-/* line 138, src/scss/_components/search/_product.scss */
+/* line 199, src/scss/_components/search/_product.scss */
 .product__box-btn {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3123,7 +3243,7 @@ picture {
   transition: border 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-/* line 153, src/scss/_components/search/_product.scss */
+/* line 214, src/scss/_components/search/_product.scss */
 .product__box-btn:hover {
   background-color: transparent;
   color: #d72d42;
@@ -3132,7 +3252,7 @@ picture {
   transition: border 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-/* line 159, src/scss/_components/search/_product.scss */
+/* line 220, src/scss/_components/search/_product.scss */
 .product__box-btn:active {
   border-color: #0a1723;
   background-color: #0a1723;
@@ -3142,7 +3262,7 @@ picture {
   transition: border 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 
-/* line 167, src/scss/_components/search/_product.scss */
+/* line 228, src/scss/_components/search/_product.scss */
 .product__box-link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3159,6 +3279,7 @@ picture {
   border-radius: 5px;
   background-color: #4f6a7a;
   color: #fff;
+  text-align: center;
   font-size: 14px;
   font-weight: 500;
   -webkit-transition: background-color 0.3s ease-in-out;
@@ -3166,7 +3287,7 @@ picture {
   transition: background-color 0.3s ease-in-out;
 }
 
-/* line 181, src/scss/_components/search/_product.scss */
+/* line 243, src/scss/_components/search/_product.scss */
 .product__box-link:hover {
   background-color: #d72d42;
   -webkit-transition: background-color 0.3s ease-in-out;
@@ -3174,7 +3295,7 @@ picture {
   transition: background-color 0.3s ease-in-out;
 }
 
-/* line 186, src/scss/_components/search/_product.scss */
+/* line 248, src/scss/_components/search/_product.scss */
 .product__box-link:active {
   background-color: #0a1723;
   -webkit-transition: background-color 0.3s ease-in-out;
