Search page - create base section - w\ adaptive.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -48,6 +48,8 @@
 @import "_components/homepage/info";
 
 @import "_components/contacts/contacts";
+
 @import "_components/notFound";
 
+@import "_components/search/base";
 @import "_components/search/product";
