--- a/src/pug/search.pug
+++ b/src/pug/search.pug
@@ -9,7 +9,6 @@ extends shared/_layout
 block content
   div.body.body--start(class!= contentClassName)
 
-
+    include components/search/_base
     .line
-
     include components/search/_product
