--- a/src/pug/components/search/_base.pug
+++ b/src/pug/components/search/_base.pug
@@ -79,7 +79,7 @@ section#base.base
               div
                 p!= "Nie tracisz gwarancji"
                 span!= "modyfikacje bez utraty gwarancji"
-            li
+            li.base__list-line
               i
             li
               div
@@ -88,7 +88,7 @@ section#base.base
               div
                 p!= "Nie tracisz gwarancji"
                 span!= "modyfikacje bez utraty gwarancji"
-            li
+            li.base__list-line
               i
             li
               div
@@ -97,7 +97,7 @@ section#base.base
               div
                 p!= "Nie tracisz gwarancji"
                 span!= "modyfikacje bez utraty gwarancji"
-            li
+            li.base__list-line
               i
             li
               div
@@ -115,7 +115,7 @@ section#base.base
               div
                 p!= "Nie tracisz gwarancji"
                 span!= "modyfikacje bez utraty gwarancji"
-            li
+            li.base__list-line
               i
             li
               div
@@ -124,7 +124,7 @@ section#base.base
               div
                 p!= "Nie tracisz gwarancji"
                 span!= "modyfikacje bez utraty gwarancji"
-            li
+            li.base__list-line
               i
             li
               div
@@ -133,7 +133,7 @@ section#base.base
               div
                 p!= "Nie tracisz gwarancji"
                 span!= "modyfikacje bez utraty gwarancji"
-            li
+            li.base__list-line
               i
             li
               div
