--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -1,158 +1,4 @@
 @charset "UTF-8";
-/*!
- * Hamburgers
- * @description Tasty CSS-animated hamburgers
- * @author Jonathan Suh @jonsuh
- * @site https://jonsuh.com/hamburgers
- * @link https://github.com/jonsuh/hamburgers
- */
-/* line 3, src/scss/_vendor/hamburger/_base.scss */
-.hamburger {
-  padding: 0 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  cursor: pointer;
-  -webkit-transition-property: opacity, -webkit-filter;
-  transition-property: opacity, -webkit-filter;
-  -o-transition-property: opacity, filter;
-  transition-property: opacity, filter;
-  transition-property: opacity, filter, -webkit-filter;
-  -webkit-transition-duration: 0.15s;
-       -o-transition-duration: 0.15s;
-          transition-duration: 0.15s;
-  -webkit-transition-timing-function: linear;
-       -o-transition-timing-function: linear;
-          transition-timing-function: linear;
-  font: inherit;
-  color: inherit;
-  text-transform: none;
-  background-color: transparent;
-  border: 0;
-  margin: 0;
-  overflow: visible;
-}
-
-/* line 21, src/scss/_vendor/hamburger/_base.scss */
-.hamburger:hover {
-  opacity: 0.7;
-}
-
-/* line 31, src/scss/_vendor/hamburger/_base.scss */
-.hamburger-box {
-  width: 16px;
-  height: 14px;
-  display: inline-block;
-  position: relative;
-}
-
-/* line 38, src/scss/_vendor/hamburger/_base.scss */
-.hamburger-inner {
-  display: block;
-  top: 50%;
-  margin-top: -1px;
-}
-
-/* line 43, src/scss/_vendor/hamburger/_base.scss */
-.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-  width: 16px;
-  height: 2px;
-  background-color: #000;
-  border-radius: 0;
-  position: absolute;
-  -webkit-transition-property: -webkit-transform;
-  transition-property: -webkit-transform;
-  -o-transition-property: transform;
-  transition-property: transform;
-  transition-property: transform, -webkit-transform;
-  -webkit-transition-duration: 0.15s;
-       -o-transition-duration: 0.15s;
-          transition-duration: 0.15s;
-  -webkit-transition-timing-function: ease;
-       -o-transition-timing-function: ease;
-          transition-timing-function: ease;
-}
-
-/* line 56, src/scss/_vendor/hamburger/_base.scss */
-.hamburger-inner::before, .hamburger-inner::after {
-  content: "";
-  display: block;
-}
-
-/* line 62, src/scss/_vendor/hamburger/_base.scss */
-.hamburger-inner::before {
-  top: -6px;
-}
-
-/* line 66, src/scss/_vendor/hamburger/_base.scss */
-.hamburger-inner::after {
-  bottom: -6px;
-}
-
-/*
-   * Squeeze
-   */
-/* line 6, src/scss/_vendor/hamburger/types/_squeeze.scss */
-.hamburger--squeeze .hamburger-inner {
-  -webkit-transition-duration: 0.075s;
-       -o-transition-duration: 0.075s;
-          transition-duration: 0.075s;
-  -webkit-transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-       -o-transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-          transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-/* line 10, src/scss/_vendor/hamburger/types/_squeeze.scss */
-.hamburger--squeeze .hamburger-inner::before {
-  -webkit-transition: top 0.075s 0.12s ease, opacity 0.075s ease;
-  -o-transition: top 0.075s 0.12s ease, opacity 0.075s ease;
-  transition: top 0.075s 0.12s ease, opacity 0.075s ease;
-}
-
-/* line 15, src/scss/_vendor/hamburger/types/_squeeze.scss */
-.hamburger--squeeze .hamburger-inner::after {
-  -webkit-transition: bottom 0.075s 0.12s ease, -webkit-transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: bottom 0.075s 0.12s ease, -webkit-transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  -o-transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19), -webkit-transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-}
-
-/* line 22, src/scss/_vendor/hamburger/types/_squeeze.scss */
-.hamburger--squeeze.is-active .hamburger-inner {
-  -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-  -webkit-transition-delay: 0.12s;
-       -o-transition-delay: 0.12s;
-          transition-delay: 0.12s;
-  -webkit-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-       -o-transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-          transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-
-/* line 27, src/scss/_vendor/hamburger/types/_squeeze.scss */
-.hamburger--squeeze.is-active .hamburger-inner::before {
-  top: 0;
-  opacity: 0;
-  -webkit-transition: top 0.075s ease, opacity 0.075s 0.12s ease;
-  -o-transition: top 0.075s ease, opacity 0.075s 0.12s ease;
-  transition: top 0.075s ease, opacity 0.075s 0.12s ease;
-}
-
-/* line 34, src/scss/_vendor/hamburger/types/_squeeze.scss */
-.hamburger--squeeze.is-active .hamburger-inner::after {
-  bottom: 0;
-  -webkit-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
-          transform: rotate(-90deg);
-  -webkit-transition: bottom 0.075s ease, -webkit-transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transition: bottom 0.075s ease, -webkit-transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
-  -o-transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
-  transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1), -webkit-transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
-}
-
 /* line 13, src/scss/_vendor/selectric/_selectric.scss */
 .selectric-wrapper {
   position: relative;
@@ -1409,29 +1255,32 @@ picture {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding-top: 30px;
+    padding-left: 25px;
   }
 }
 
-/* line 12, src/scss/_macros/_nav.scss */
+/* line 14, src/scss/_macros/_nav.scss */
 .nav__item {
   margin-right: 22px;
 }
 
 @media screen and (max-width: 1365px) {
-  /* line 15, src/scss/_macros/_nav.scss */
+  /* line 17, src/scss/_macros/_nav.scss */
   .nav__item:last-of-type {
     margin-right: 0;
   }
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 12, src/scss/_macros/_nav.scss */
+  /* line 14, src/scss/_macros/_nav.scss */
   .nav__item {
+    width: 100%;
     margin-right: 0;
   }
 }
 
-/* line 24, src/scss/_macros/_nav.scss */
+/* line 27, src/scss/_macros/_nav.scss */
 .nav__link {
   position: relative;
   display: -webkit-box;
@@ -1447,17 +1296,54 @@ picture {
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 24, src/scss/_macros/_nav.scss */
+  /* line 27, src/scss/_macros/_nav.scss */
   .nav__link {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
     min-height: 50px;
     padding-bottom: 0;
+    padding-right: 50px;
+    color: #e4eaef;
+    font-size: 16px;
+  }
+  /* line 43, src/scss/_macros/_nav.scss */
+  .nav__link:before {
+    content: '';
+    position: absolute;
+    top: calc(50% - 3px);
+    right: 28px;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    width: 3px;
+    height: 14px;
+    background-color: #e4eaef;
+    -webkit-transition: background-color 0.3s ease-in-out;
+    -o-transition: background-color 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
+  }
+  /* line 55, src/scss/_macros/_nav.scss */
+  .nav__link:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%) rotate(45deg);
+        -ms-transform: translateY(-50%) rotate(45deg);
+            transform: translateY(-50%) rotate(45deg);
+    right: 25px;
+    padding: 3px;
+    border: solid #e4eaef;
+    border-width: 0 3px 3px 0;
+    -webkit-transition: top 0.3s ease-in-out, border-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+    transition: top 0.3s ease-in-out, border-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+    -o-transition: top 0.3s ease-in-out, transform 0.3s ease-in-out, border-color 0.3s ease-in-out;
+    transition: top 0.3s ease-in-out, transform 0.3s ease-in-out, border-color 0.3s ease-in-out;
+    transition: top 0.3s ease-in-out, transform 0.3s ease-in-out, border-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
   }
 }
 
-/* line 38, src/scss/_macros/_nav.scss */
+/* line 68, src/scss/_macros/_nav.scss */
 .nav__link.is-active, .nav__link:hover {
   color: #0a1723;
   -webkit-transition: color 0.3s ease-in-out;
@@ -1465,7 +1351,14 @@ picture {
   transition: color 0.3s ease-in-out;
 }
 
-/* line 43, src/scss/_macros/_nav.scss */
+@media screen and (max-width: 1199px) {
+  /* line 68, src/scss/_macros/_nav.scss */
+  .nav__link.is-active, .nav__link:hover {
+    color: #e4eaef;
+  }
+}
+
+/* line 76, src/scss/_macros/_nav.scss */
 .nav__link.is-active .nav__link-icon, .nav__link:hover .nav__link-icon {
   opacity: 1;
   -webkit-transition: opacity 0.3s ease-in-out;
@@ -1473,7 +1366,37 @@ picture {
   transition: opacity 0.3s ease-in-out;
 }
 
-/* line 49, src/scss/_macros/_nav.scss */
+/* line 82, src/scss/_macros/_nav.scss */
+.nav__link.is-drop {
+  color: #fab32a;
+  -webkit-transition: color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+
+/* line 86, src/scss/_macros/_nav.scss */
+.nav__link.is-drop:before {
+  background-color: #fab32a;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+/* line 91, src/scss/_macros/_nav.scss */
+.nav__link.is-drop:after {
+  top: calc(50% - 6px);
+  -webkit-transform: translateY(-50%) rotate(-135deg);
+      -ms-transform: translateY(-50%) rotate(-135deg);
+          transform: translateY(-50%) rotate(-135deg);
+  border-color: #fab32a;
+  -webkit-transition: top 0.3s ease-in-out, border-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  transition: top 0.3s ease-in-out, border-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  -o-transition: top 0.3s ease-in-out, transform 0.3s ease-in-out, border-color 0.3s ease-in-out;
+  transition: top 0.3s ease-in-out, transform 0.3s ease-in-out, border-color 0.3s ease-in-out;
+  transition: top 0.3s ease-in-out, transform 0.3s ease-in-out, border-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+/* line 99, src/scss/_macros/_nav.scss */
 .nav__link-icon {
   opacity: 0;
   position: absolute;
@@ -1488,10 +1411,243 @@ picture {
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 49, src/scss/_macros/_nav.scss */
+  /* line 99, src/scss/_macros/_nav.scss */
   .nav__link-icon {
-    display: none;
+    opacity: 1;
+    position: static;
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
+    width: 31px;
+    margin-right: 15px;
   }
+}
+
+/* line 115, src/scss/_macros/_nav.scss */
+.nav__link-dropdown {
+  display: none;
+  margin-left: 46px;
+}
+
+/* line 121, src/scss/_macros/_nav.scss */
+.nav__link-dropdown > ul > li > a {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 40px;
+  padding-left: 21px;
+  padding-right: 60px;
+  color: #e4eaef;
+  font-size: 16px;
+  -webkit-transition: color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+
+/* line 132, src/scss/_macros/_nav.scss */
+.nav__link-dropdown > ul > li > a.is-subdrop {
+  color: #fab32a;
+  -webkit-transition: color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+
+/* line 136, src/scss/_macros/_nav.scss */
+.nav__link-dropdown > ul > li > a.is-subdrop:before {
+  background-color: #fab32a;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+/* line 141, src/scss/_macros/_nav.scss */
+.nav__link-dropdown > ul > li > a.is-subdrop:after {
+  border-color: #fab32a transparent transparent transparent;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+}
+
+/* line 147, src/scss/_macros/_nav.scss */
+.nav__link-dropdown > ul > li > a:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 6px;
+  height: 6px;
+  background-color: #e4eaef;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+/* line 159, src/scss/_macros/_nav.scss */
+.nav__link-dropdown > ul > li > a:after {
+  content: '';
+  position: absolute;
+  right: 50px;
+  top: calc(50% - 3px);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border-width: 6px;
+  border-style: solid;
+  border-color: transparent transparent #e4eaef transparent;
+  -webkit-transition: border-color 0.3s ease-in-out;
+  -o-transition: border-color 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out;
+}
+
+/* line 175, src/scss/_macros/_nav.scss */
+.nav__link-subdropdown {
+  display: none;
+  margin-left: 21px;
+}
+
+/* line 181, src/scss/_macros/_nav.scss */
+.nav__link-subdropdown > ul > li > a {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 40px;
+  padding-left: 21px;
+  color: #e4eaef;
+  font-size: 16px;
+}
+
+/* line 190, src/scss/_macros/_nav.scss */
+.nav__link-subdropdown > ul > li > a:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 6px;
+  height: 3px;
+  background-color: #e4eaef;
+}
+
+/* line 3, src/scss/_macros/_hamburger.scss */
+.c-hamburger {
+  cursor: pointer;
+  display: none;
+}
+
+@media screen and (max-width: 1199px) {
+  /* line 3, src/scss/_macros/_hamburger.scss */
+  .c-hamburger {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  /* line 10, src/scss/_macros/_hamburger.scss */
+  .c-hamburger.is-active {
+    z-index: 1000;
+    position: fixed;
+    right: 15px;
+  }
+}
+
+/* line 17, src/scss/_macros/_hamburger.scss */
+.c-hamburger.is-active .c-hamburger__inner {
+  background-color: #999fa5;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+/* line 21, src/scss/_macros/_hamburger.scss */
+.c-hamburger.is-active .c-hamburger__inner:after, .c-hamburger.is-active .c-hamburger__inner:before {
+  background-color: #999fa5;
+  -webkit-transition: background-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+/* line 26, src/scss/_macros/_hamburger.scss */
+.c-hamburger.is-active .c-hamburger__inner:before {
+  -webkit-transform: translateX(-4px);
+      -ms-transform: translateX(-4px);
+          transform: translateX(-4px);
+}
+
+/* line 29, src/scss/_macros/_hamburger.scss */
+.c-hamburger.is-active .c-hamburger__inner:after {
+  -webkit-transform: translateX(-8px);
+      -ms-transform: translateX(-8px);
+          transform: translateX(-8px);
+}
+
+/* line 35, src/scss/_macros/_hamburger.scss */
+.c-hamburger__box {
+  position: relative;
+  width: 20px;
+  height: 17px;
+}
+
+/* line 41, src/scss/_macros/_hamburger.scss */
+.c-hamburger__inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  border-radius: 2px;
+  background-color: #0a1723;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  -o-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
+}
+
+/* line 51, src/scss/_macros/_hamburger.scss */
+.c-hamburger__inner:after, .c-hamburger__inner:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  border-radius: 2px;
+  background-color: #0a1723;
+  -webkit-transition: background-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  -o-transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+/* line 63, src/scss/_macros/_hamburger.scss */
+.c-hamburger__inner:before {
+  bottom: -7px;
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
+}
+
+/* line 68, src/scss/_macros/_hamburger.scss */
+.c-hamburger__inner:after {
+  bottom: -14px;
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
 }
 
 /* line 3, src/scss/_components/_header.scss */
@@ -1637,13 +1793,13 @@ picture {
     z-index: 100;
     overflow-y: auto;
     position: fixed;
-    top: 75px;
+    top: 0;
     left: 0;
     width: 100%;
-    height: calc(100vh - 75px);
+    height: 100vh;
     padding-top: 50px;
     padding-bottom: 50px;
-    background-color: #fff;
+    background-color: #0a1723;
     -webkit-animation-fill-mode: both;
             animation-fill-mode: both;
     -webkit-animation-duration: 0.75s;
@@ -1653,12 +1809,33 @@ picture {
   }
 }
 
+/* line 95, src/scss/_components/_header.scss */
+.header__wrapper-title {
+  display: none;
+  position: absolute;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0;
+  left: 25px;
+  height: 75px;
+  color: #999fa5;
+  font-size: 16px;
+  font-weight: 600;
+}
+
 @media screen and (max-width: 767px) {
-  /* line 94, src/scss/_components/_header.scss */
-  .header__wrapper-right.is-open {
-    top: 50px;
-    height: calc(100vh - 50px);
+  /* line 95, src/scss/_components/_header.scss */
+  .header__wrapper-title {
+    height: 50px;
   }
+}
+
+/* line 109, src/scss/_components/_header.scss */
+.is-open .header__wrapper-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @-webkit-keyframes c-fadeIn {
