--- a/src/scss/_components/_header.scss
+++ b/src/scss/_components/_header.scss
@@ -78,23 +78,36 @@
           z-index: 100;
           overflow-y: auto;
           position: fixed;
-          top: 75px;
+          top: 0;
           left: 0;
           width: 100%;
-          height: calc(100vh - 75px);
+          height: 100vh;
           padding-top: 50px;
           padding-bottom: 50px;
-          background-color: $c-white;
+          background-color: #0a1723;
           animation-fill-mode: both;
           animation-duration: 0.75s;
           animation-name: c-fadeIn;
         }
       }
+    }
+
+    &-title {
+      display: none;
+      position: absolute;
+      align-items: center;
+      top: 0;
+      left: 25px;
+      height: 75px;
+      color: #999fa5;
+      font-size: 16px;
+      font-weight: 600;
       @include respond(max-small) {
-        &.is-open {
-          top: 50px;
-          height: calc(100vh - 50px);
-        }
+        height: 50px;
+      }
+
+      .is-open & {
+        display: flex;
       }
     }
   }
