--- a/src/scss/_macros/_nav.scss
+++ b/src/scss/_macros/_nav.scss
@@ -6,6 +6,8 @@
     align-items: center;
     @include respond(max-large) {
       flex-direction: column;
+      padding-top: 30px;
+      padding-left: 25px;
     }
   }
 
@@ -17,6 +19,7 @@
       }
     }
     @include respond(max-large) {
+      width: 100%;
       margin-right: 0;
     }
   }
@@ -33,16 +36,63 @@
       align-items: center;
       min-height: 50px;
       padding-bottom: 0;
+      padding-right: 50px;
+      color: #e4eaef;
+      font-size: 16px;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: calc(50% - 3px);
+        right: 28px;
+        transform: translateY(-50%);
+        width: 3px;
+        height: 14px;
+        background-color: #e4eaef;
+        @include transition(background-color);
+      }
+
+      &:after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%) rotate(45deg);
+        right: 25px;
+        padding: 3px;
+        border: solid #e4eaef;
+        border-width: 0 3px 3px 0;
+        @include transition(top, transform, border-color);
+      }
     }
 
     &.is-active,
     &:hover {
       color: #0a1723;
       @include transition(color);
+      @include respond(max-large) {
+        color: #e4eaef;
+      }
 
       .nav__link-icon {
         opacity: 1;
         @include transition(opacity);
+      }
+    }
+    
+    &.is-drop {
+      color: #fab32a;
+      @include transition(color);
+
+      &:before {
+        background-color: #fab32a;
+        @include transition(background-color);
+      }
+
+      &:after {
+        top: calc(50% - 6px);
+        transform: translateY(-50%) rotate(-135deg);
+        border-color: #fab32a;
+        @include transition(top, transform, border-color);
       }
     }
 
@@ -54,7 +104,101 @@
       transform: translateX(-50%);
       @include transition(opacity);
       @include respond(max-large) {
-        display: none;
+        opacity: 1;
+        position: static;
+        transform: translateX(0);
+        width: 31px;
+        margin-right: 15px;
+      }
+    }
+
+    &-dropdown {
+      display: none;
+      margin-left: 46px;
+
+      > ul {
+        > li {
+          > a {
+            position: relative;
+            display: flex;
+            align-items: center;
+            min-height: 40px;
+            padding-left: 21px;
+            padding-right: 60px;
+            color: #e4eaef;
+            font-size: 16px;
+            @include transition(color);
+
+            &.is-subdrop {
+              color: #fab32a;
+              @include transition(color);
+
+              &:before {
+                background-color: #fab32a;
+                @include transition(background-color);
+              }
+
+              &:after {
+                border-color: #fab32a transparent transparent transparent;
+                @include transition(border-color);
+              }
+            }
+
+            &:before {
+              content: '';
+              position: absolute;
+              left: 0;
+              top: 50%;
+              transform: translateY(-50%);
+              width: 6px;
+              height: 6px;
+              background-color: #e4eaef;
+              @include transition(background-color);
+            }
+
+            &:after {
+              content: '';
+              position: absolute;
+              right: 50px;
+              top: calc(50% - 3px);
+              transform: translateY(-50%);
+              border-width: 6px;
+              border-style: solid;
+              border-color: transparent transparent #e4eaef transparent;
+              @include transition(border-color);
+            }
+          }
+        }
+      }
+    }
+
+    &-subdropdown {
+      display: none;
+      margin-left: 21px;
+
+      > ul {
+        > li {
+          > a {
+            position: relative;
+            display: flex;
+            align-items: center;
+            min-height: 40px;
+            padding-left: 21px;
+            color: #e4eaef;
+            font-size: 16px;
+
+            &:before {
+              content: '';
+              position: absolute;
+              left: 0;
+              top: 50%;
+              transform: translateY(-50%);
+              width: 6px;
+              height: 3px;
+              background-color: #e4eaef;
+            }
+          }
+        }
       }
     }
   }
